exageostat_parsec/hicma/chameleon/control/morse_zf90.F90


#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function MORSE_zhemm_Tile_Async_c(side,uplo,alpha,A,B,beta,C,sequence,request) &
          & bind(c, name='MORSE_zhemm_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zhemm_Tile_Async_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: C
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zhemm_Tile_Async_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function MORSE_zher2k_Tile_Async_c(uplo,trans,alpha,A,B,beta,C,sequence,request) &
          & bind(c, name='MORSE_zher2k_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zher2k_Tile_Async_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            real(kind=c_double), value :: beta
            type(c_ptr), value :: C
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zher2k_Tile_Async_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function MORSE_zherk_Tile_Async_c(uplo,trans,alpha,A,beta,C,sequence,request) &
          & bind(c, name='MORSE_zherk_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zherk_Tile_Async_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            real(kind=c_double), value :: alpha
            type(c_ptr), value :: A
            real(kind=c_double), value :: beta
            type(c_ptr), value :: C
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zherk_Tile_Async_c
      end interface
#endif

      interface
         function MORSE_zhetrd_Tile_Async_c(jobz,uplo,A,D,E,T,Q,LDQ,sequence,request) &
          & bind(c, name='MORSE_zhetrd_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zhetrd_Tile_Async_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: D
            type(c_ptr), value :: E
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zhetrd_Tile_Async_c
      end interface

      interface
         function MORSE_zlacpy_Tile_Async_c(uplo,A,B,sequence,request) &
          & bind(c, name='MORSE_zlacpy_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlacpy_Tile_Async_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zlacpy_Tile_Async_c
      end interface

      interface
         function MORSE_zlange_Tile_Async_c(norm,A,work,value,sequence,request) &
          & bind(c, name='MORSE_zlange_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlange_Tile_Async_c
            integer(kind=c_int), value :: norm
            type(c_ptr), value :: A
            type(c_ptr), value :: work
            type(c_ptr), value :: value
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zlange_Tile_Async_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function MORSE_zlanhe_Tile_Async_c(norm,uplo,A,work,value,sequence,request) &
          & bind(c, name='MORSE_zlanhe_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlanhe_Tile_Async_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: work
            type(c_ptr), value :: value
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zlanhe_Tile_Async_c
      end interface
#endif

      interface
         function MORSE_zlansy_Tile_Async_c(norm,uplo,A,work,value,sequence,request) &
          & bind(c, name='MORSE_zlansy_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlansy_Tile_Async_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: work
            type(c_ptr), value :: value
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zlansy_Tile_Async_c
      end interface

      interface
         function MORSE_zlaset_Tile_Async_c(uplo,alpha,beta,A,sequence,request) &
          & bind(c, name='MORSE_zlaset_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlaset_Tile_Async_c
            integer(kind=c_int), value :: uplo
            complex(kind=c_double_complex), value :: alpha
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: A
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zlaset_Tile_Async_c
      end interface

      interface
         function MORSE_zlaswp_Tile_Async_c(A,K1,K2,IPIV,INCX,sequence,request) &
          & bind(c, name='MORSE_zlaswp_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlaswp_Tile_Async_c
            type(c_ptr), value :: A
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zlaswp_Tile_Async_c
      end interface

      interface
         function MORSE_zlaswpc_Tile_Async_c(A,K1,K2,IPIV,INCX,sequence,request) &
          & bind(c, name='MORSE_zlaswpc_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlaswpc_Tile_Async_c
            type(c_ptr), value :: A
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zlaswpc_Tile_Async_c
      end interface

      interface
         function MORSE_zlauum_Tile_Async_c(uplo,A,sequence,request) &
          & bind(c, name='MORSE_zlauum_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlauum_Tile_Async_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zlauum_Tile_Async_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function MORSE_zplghe_Tile_Async_c(bump,uplo,A,seed,sequence,request) &
          & bind(c, name='MORSE_zplghe_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zplghe_Tile_Async_c
            real(kind=c_double), value :: bump
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zplghe_Tile_Async_c
      end interface
#endif

      interface
         function MORSE_zplgsy_Tile_Async_c(bump,uplo,A,seed,sequence,request) &
          & bind(c, name='MORSE_zplgsy_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zplgsy_Tile_Async_c
            complex(kind=c_double_complex), value :: bump
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zplgsy_Tile_Async_c
      end interface

      interface
         function MORSE_zplrnt_Tile_Async_c(A,seed,sequence,request) &
          & bind(c, name='MORSE_zplrnt_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zplrnt_Tile_Async_c
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zplrnt_Tile_Async_c
      end interface

      interface
         function MORSE_zposv_Tile_Async_c(uplo,A,B,sequence,request) &
          & bind(c, name='MORSE_zposv_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zposv_Tile_Async_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zposv_Tile_Async_c
      end interface

      interface
         function MORSE_zsysv_Tile_Async_c(uplo,A,B,sequence,request) &
          & bind(c, name='MORSE_zsysv_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsysv_Tile_Async_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zsysv_Tile_Async_c
      end interface

      interface
         function MORSE_zpotrf_Tile_Async_c(uplo,A,sequence,request) &
          & bind(c, name='MORSE_zpotrf_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zpotrf_Tile_Async_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zpotrf_Tile_Async_c
      end interface

      interface
         function MORSE_zsytrf_Tile_Async_c(uplo,A,sequence,request) &
          & bind(c, name='MORSE_zsytrf_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsytrf_Tile_Async_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zsytrf_Tile_Async_c
      end interface
